fix(core): use z-index on popup only to avoid clipping
Also:
* Remove unnessecary margin on mw-body-header
* Move the extra mw-body margin to mw-body-header, as there can be other elements in mw-body

--- a/resources/skins.citizen.styles/Pagetools.less
+++ b/resources/skins.citizen.styles/Pagetools.less
@@ -49,6 +49,7 @@
 
 	&__card {
 		position: absolute;
+		z-index: @z-index-page-header; // So the popups inside will be higher than content
 		right: 0;
 		overflow: auto;
 		min-width: 200px;
